<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/name"
        style="@style/Bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_name"
        android:inputType="textMultiLine"
        android:background="@drawable/edit_text_bg"
        android:padding="16dp"
        style="@style/SemiBold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/role"
        style="@style/Bold"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/professorRadioButton"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/professor"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/radio_button_selector"
        android:button="@null"
        android:textColor="@color/radio_button_text_color_selector"
        android:padding="16dp"
        style="@style/SemiBold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/studentRadioButton"
        app:layout_constraintTop_toBottomOf="@+id/role" />

    <RadioButton
        android:id="@+id/studentRadioButton"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/student"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/radio_button_selector"
        android:button="@null"
        android:textColor="@color/radio_button_text_color_selector"
        android:padding="16dp"
        style="@style/SemiBold"
        app:layout_constraintStart_toEndOf="@+id/professorRadioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/role" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        style="@style/SemiBold"
        android:text="@string/log_out"
        android:textColor="@color/red"
        android:textAllCaps="false"
        android:background="@drawable/white_btn_bg"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/black_btn_bg"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:stateListAnimator="@null"
        style="@style/SemiBold"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
