<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profileButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/profile"
        android:elevation="0dp"
        android:padding="20dp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toStartOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        style="@style/SemiBold"
        app:layout_constraintBottom_toTopOf="@+id/badge"
        app:layout_constraintStart_toEndOf="@+id/profileButton"
        app:layout_constraintTop_toTopOf="@+id/profileButton" />

    <TextView
        android:id="@+id/badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/badge"
        android:text="@string/student"
        android:textSize="8sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        style="@style/Medium"
        app:layout_constraintStart_toEndOf="@id/profileButton"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintBottom_toBottomOf="@id/profileButton"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/classListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/class_list"
        android:textSize="20sp"
        style="@style/Bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/joinButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/black_btn_bg"
        android:text="@string/join_new_class"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        style="@style/Bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/studentClassRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classListTextView"
        app:layout_constraintBottom_toTopOf="@+id/joinButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
