<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/checkText"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/are_you_sure_you_want_to_logout"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        style="@style/SemiBold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yesButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/white_btn_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:stateListAnimator="@null"
        style="@style/SemiBold"
        app:layout_constraintEnd_toStartOf="@+id/noButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkText"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/noButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/white_btn_bg"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:stateListAnimator="@null"
        style="@style/SemiBold"
        app:layout_constraintStart_toEndOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkText"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>