...
    <Button
        android:id="@+id/studentButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="Student"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/professorButton"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintBottom_toTopOf="@+id/availableTimeButton" />

    <Button
...
